--- a/doc/unroot.8
+++ b/doc/unroot.8
@@ -24,5 +24,5 @@ Specifies a capability set which is to be used. \fIcapstr\fR
 must be a textual capability representation as described in
 .BR cap_from_text (3).
 .SH SEE ALSO
-.BR capability (7),
+.BR capabilities (7),
 .BR cap_from_text (3)
