-l,--link option for chsmack, by default symlinks are now followed

--- a/doc/chsmack.8
+++ b/doc/chsmack.8
@@ -18,6 +18,9 @@ labels are printed to stdout.
 .B -h, --help
 Show a short usage description.
 .TP
+.B -l, --link
+Change attributes of symlinks rather than following them.
+.TP
 .BI "-a, --access=" label
 Change the files' access label to \fIlabel\fR. This label is used for
 standard permission checking.
